Updates made to begin the front end handling of the plaid link